K1J-520: Added patient it to not found and error response